[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 100
exclude = '''
/(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytype
    | _build
    | buck-out
    | build
    | dist
)/
| docs/conf.py
| pytablewriter/_typing.py
| setup.py
'''

[tool.isort]
known_third_party = [
    'elasticsearch',
    'pandas',
    'pathvalidate',
    'pytablereader',
    'pytest',
    'simplejson',
    'sphinx_rtd_theme',
    'sqliteschema',
    'tabledata',
    'typepy',
    'typing_extensions',
    'yaml',
]
include_trailing_comma = true
line_length = 100
lines_after_imports = 2
multi_line_output = 3
skip_glob = [
    '*/.eggs/*',
    '*/.pytype/*',
    '*/.tox/*',
    'pytablewriter/_typing.py',
]

[tool.coverage.run]
source = ['pytablewriter']
branch = true

[tool.coverage.report]
show_missing = true
precision = 1
exclude_lines = [
    'except ImportError',
    'raise NotImplementedError',
    'pass',
    'ABCmeta',
    'abstractmethod',
    'abstractproperty',
    'abstractclassmethod',
    'warnings.warn',
]
omit = [
    'pytablewriter/_typing.py',
]

[tool.pytest.ini_options]
testpaths = [
    "test",
]

md_report = true
md_report_verbose = 0
md_report_color = "auto"

discord_verbose = 0
